<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="100dp"
    android:layout_height="match_parent"
    tools:context="com.example.sagar.moviesuccesspredictor.OneFragment">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enterinfo"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:columnCount="2"

            android:layout_marginTop="30dp"
            android:id="@+id/gridlayout">
            <TextView

                android:layout_column="0"
                android:layout_row="0"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"

                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor1" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
            android:entries="@array/items"
                android:background="@color/colorPrimary"
                />
            <TextView

                android:layout_column="0"
                android:layout_row="1"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor2" />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />
            <TextView

                android:layout_column="0"
                android:layout_row="2"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor3" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />
            <TextView

                android:layout_column="0"
                android:layout_row="3"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actor4" />

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />
            </GridLayout>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gridlayout"
                android:columnCount="2"
                android:layout_marginTop="16dp"
                android:id="@+id/grid2"
                  >

            <TextView

                android:layout_column="0"
                android:layout_row="0"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actress1" />

            <Spinner
                android:id="@+id/spinner5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />

            <TextView

                android:layout_column="0"
                android:layout_row="1"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/actress2" />

            <Spinner
                android:id="@+id/spinner6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />
                <TextView
                    android:textAlignment="center"

                    android:layout_column="0"
                    android:layout_row="2"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/actress3" />

                <Spinner
                    android:id="@+id/spinner7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:entries="@array/items"
                    android:background="@color/colorPrimary"

                    />

        </GridLayout>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grid2"
                android:columnCount="2"
                android:layout_marginTop="16dp"
                android:id="@+id/grid3"

                >

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:textAlignment="center"

                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/Director"
                android:id="@+id/tvtv"/>

            <Spinner
                android:id="@+id/spinner8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/items"
                android:background="@color/colorPrimary"

                />
  </GridLayout>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/grid3"
                android:columnCount="2"
                android:layout_marginTop="15dp"
                android:id="@+id/grid4"

                >

                <TextView
                    android:layout_column="0"
                    android:layout_row="0"
                    android:textAlignment="center"

                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/Producer"
                   />
                <Spinner
                    android:id="@+id/spinner9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/items"
                    android:background="@color/colorPrimary"

                    />
            </GridLayout>


                <TextView
                    android:layout_marginTop="15dp"
                    android:layout_below="@+id/grid4"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:background="#fff"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/budjet"
                    android:id="@+id/textView5" />

            <EditText
                android:id="@+id/et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/colorPrimaryDark"

                android:hint="@string/cash"

                android:inputType="number"  android:layout_toEndOf="@+id/textView5"
                android:layout_alignTop="@+id/textView5"
                android:layout_alignBottom="@+id/textView5" />


            <TextView
                android:layout_marginTop="15dp"
                android:layout_below="@+id/textView5"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:background="#fff"
                android:textStyle="bold"
                android:textSize="16sp"

                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/Genera"
            android:id="@+id/tvx"
                />

            <Spinner
                android:id="@+id/genera_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/colorPrimaryDark"


                  android:layout_toEndOf="@+id/tvx"
                android:layout_alignTop="@+id/tvx"
                android:layout_alignBottom="@+id/tvx"
                android:entries="@array/genera"/>

            <Button
                android:id="@+id/button3"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/genera_spinner"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@+id/tvx"
                android:text="@string/predict"
                android:background="@color/colorPrimaryDark"
                android:textColor="#fff"
                android:elevation="6dp"
               />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_alignTop="@+id/button3"
                android:layout_toEndOf="@+id/tvx" />


        </RelativeLayout>

   </ScrollView>
